csrc/libavfilter/buffersink.h


int av_buffersink_get_buffer_ref(AVFilterContext *buffer_sink,
                                 AVFilterBufferRef **bufref, int flags);
int av_buffersink_poll_frame(AVFilterContext *ctx);
int av_buffersink_read(AVFilterContext *ctx, AVFilterBufferRef **buf);