src/org/ffmpeg/avfilter/AvfilterLibrary.java

	/**
	 * Queue a command for one or more filter instances.<br>
	 * * @param graph  the filter graph<br>
	 * @param target the filter(s) to which the command should be sent<br>
	 *               "all" sends to all filters<br>
	 *               otherwise it can be a filter or filter instance name<br>
	 *               which will send the command to all matching filters.<br>
	 * @param cmd    the command to sent, for handling simplicity all commands must be alphanumeric only<br>
	 * @param arg    the argument for the command<br>
	 * @param ts     time at which the command should be sent to the filter<br>
	 * * @note As this executes commands after this function returns, no return code<br>
	 *       from the filter is provided, also AVFILTER_CMD_FLAG_ONE is not supported.<br>
	 * Original signature : <code>int avfilter_graph_queue_command(AVFilterGraph*, const char*, const char*, const char*, int, double)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:1133</i>
	 */
	public static int avfilter_graph_queue_command(Pointer<AVFilterGraph > graph, Pointer<Byte > target, Pointer<Byte > cmd, Pointer<Byte > arg, int flags, double ts) {
		return avfilter_graph_queue_command(Pointer.getPeer(graph), Pointer.getPeer(target), Pointer.getPeer(cmd), Pointer.getPeer(arg), flags, ts);
	}
	protected native static int avfilter_graph_queue_command(@Ptr long graph, @Ptr long target, @Ptr long cmd, @Ptr long arg, int flags, double ts);
	/**
	 * Dump a graph into a human-readable string representation.<br>
	 * * @param graph    the graph to dump<br>
	 * @param options  formatting options; currently ignored<br>
	 * @return  a string, or NULL in case of memory allocation failure;<br>
	 *          the string must be freed using av_free<br>
	 * Original signature : <code>char* avfilter_graph_dump(AVFilterGraph*, const char*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:1142</i>
	 */
	public static Pointer<Byte > avfilter_graph_dump(Pointer<AVFilterGraph > graph, Pointer<Byte > options) {
		return Pointer.pointerToAddress(avfilter_graph_dump(Pointer.getPeer(graph), Pointer.getPeer(options)), Byte.class);
	}
	@Ptr 
	protected native static long avfilter_graph_dump(@Ptr long graph, @Ptr long options);
	/**
	 * Request a frame on the oldest sink link.<br>
	 * * If the request returns AVERROR_EOF, try the next.<br>
	 * * Note that this function is not meant to be the sole scheduling mechanism<br>
	 * of a filtergraph, only a convenience function to help drain a filtergraph<br>
	 * in a balanced way under normal circumstances.<br>
	 * * Also note that AVERROR_EOF does not mean that frames did not arrive on<br>
	 * some of the sinks during the process.<br>
	 * When there are multiple sink links, in case the requested link<br>
	 * returns an EOF, this may cause a filter to flush pending frames<br>
	 * which are sent to another sink link, although unrequested.<br>
	 * * @return  the return value of ff_request_frame(),<br>
	 *          or AVERROR_EOF if all links returned AVERROR_EOF<br>
	 * Original signature : <code>int avfilter_graph_request_oldest(AVFilterGraph*)</code><br>
	 * <i>native declaration : libavfilter/avfilter.h:1158</i>
	 */
	public static int avfilter_graph_request_oldest(Pointer<AVFilterGraph > graph) {
		return avfilter_graph_request_oldest(Pointer.getPeer(graph));
	}
	protected native static int avfilter_graph_request_oldest(@Ptr long graph);
	/**
	 * Queue an audio buffer to the audio buffer source.<br>
	 * * @param abuffersrc audio source buffer context<br>
	 * @param data pointers to the samples planes<br>
	 * @param linesize linesizes of each audio buffer plane<br>
	 * @param nb_samples number of samples per channel<br>
	 * @param sample_fmt sample format of the audio data<br>
	 * @param ch_layout channel layout of the audio data<br>
	 * @param planar flag to indicate if audio data is planar or packed<br>
	 * @param pts presentation timestamp of the audio buffer<br>
	 * @param flags unused<br>
	 * * @deprecated use av_buffersrc_add_ref() instead.<br>
	 * Original signature : <code>int av_asrc_buffer_add_samples(AVFilterContext*, uint8_t*[8], int[8], int, int, int, int64_t, int, int64_t, int)</code><br>
	 * <i>native declaration : libavfilter/asrc_abuffer.h:14</i>
	 */
	public static int av_asrc_buffer_add_samples(Pointer<AVFilterContext > abuffersrc, Pointer<Pointer<Byte > > data, Pointer<Integer > linesize, int nb_samples, int sample_rate, int sample_fmt, long ch_layout, int planar, long pts, int flags) {
		return av_asrc_buffer_add_samples(Pointer.getPeer(abuffersrc), Pointer.getPeer(data), Pointer.getPeer(linesize), nb_samples, sample_rate, sample_fmt, ch_layout, planar, pts, flags);
	}
	protected native static int av_asrc_buffer_add_samples(@Ptr long abuffersrc, @Ptr long data, @Ptr long linesize, int nb_samples, int sample_rate, int sample_fmt, long ch_layout, int planar, long pts, int flags);
	/**
	 * Queue an audio buffer to the audio buffer source.<br>
	 * * This is similar to av_asrc_buffer_add_samples(), but the samples<br>
	 * are stored in a buffer with known size.<br>
	 * * @param abuffersrc audio source buffer context<br>
	 * @param buf pointer to the samples data, packed is assumed<br>
	 * @param size the size in bytes of the buffer, it must contain an<br>
	 * integer number of samples<br>
	 * @param sample_fmt sample format of the audio data<br>
	 * @param ch_layout channel layout of the audio data<br>
	 * @param pts presentation timestamp of the audio buffer<br>
	 * @param flags unused<br>
	 * * @deprecated use av_buffersrc_add_ref() instead.<br>
	 * Original signature : <code>int av_asrc_buffer_add_buffer(AVFilterContext*, uint8_t*, int, int, int, int64_t, int, int64_t, int)</code><br>
	 * <i>native declaration : libavfilter/asrc_abuffer.h:30</i>
	 */
	public static int av_asrc_buffer_add_buffer(Pointer<AVFilterContext > abuffersrc, Pointer<Byte > buf, int buf_size, int sample_rate, int sample_fmt, long ch_layout, int planar, long pts, int flags) {
		return av_asrc_buffer_add_buffer(Pointer.getPeer(abuffersrc), Pointer.getPeer(buf), buf_size, sample_rate, sample_fmt, ch_layout, planar, pts, flags);
	}
	protected native static int av_asrc_buffer_add_buffer(@Ptr long abuffersrc, @Ptr long buf, int buf_size, int sample_rate, int sample_fmt, long ch_layout, int planar, long pts, int flags);
	/**
	 * Queue an audio buffer to the audio buffer source.<br>
	 * * @param abuffersrc audio source buffer context<br>
	 * @param samplesref buffer ref to queue<br>
	 * @param flags unused<br>
	 * * @deprecated use av_buffersrc_add_ref() instead.<br>
	 * Original signature : <code>int av_asrc_buffer_add_audio_buffer_ref(AVFilterContext*, AVFilterBufferRef*, int)</code><br>
	 * <i>native declaration : libavfilter/asrc_abuffer.h:39</i>
	 */
	public static int av_asrc_buffer_add_audio_buffer_ref(Pointer<AVFilterContext > abuffersrc, Pointer<AVFilterBufferRef > samplesref, int flags) {
		return av_asrc_buffer_add_audio_buffer_ref(Pointer.getPeer(abuffersrc), Pointer.getPeer(samplesref), flags);
	}
	protected native static int av_asrc_buffer_add_audio_buffer_ref(@Ptr long abuffersrc, @Ptr long samplesref, int flags);
	/**
	 * Create and return a picref reference from the data and properties<br>
	 * contained in frame.<br>
	 * * @param perms permissions to assign to the new buffer reference<br>
	 * @deprecated avfilter APIs work natively with AVFrame instead.<br>
	 * Original signature : <code>AVFilterBufferRef* avfilter_get_video_buffer_ref_from_frame(const AVFrame*, int)</code><br>
	 * <i>native declaration : libavfilter/avcodec.h:7</i>
	 */
	public static Pointer<AVFilterBufferRef > avfilter_get_video_buffer_ref_from_frame(Pointer<AVFrame > frame, int perms) {
		return Pointer.pointerToAddress(avfilter_get_video_buffer_ref_from_frame(Pointer.getPeer(frame), perms), AVFilterBufferRef.class);
	}
	@Ptr 
	protected native static long avfilter_get_video_buffer_ref_from_frame(@Ptr long frame, int perms);
	/**
	 * Create and return a picref reference from the data and properties<br>
	 * contained in frame.<br>
	 * * @param perms permissions to assign to the new buffer reference<br>
	 * @deprecated avfilter APIs work natively with AVFrame instead.<br>
	 * Original signature : <code>AVFilterBufferRef* avfilter_get_audio_buffer_ref_from_frame(const AVFrame*, int)</code><br>
	 * <i>native declaration : libavfilter/avcodec.h:15</i>
	 */
	public static Pointer<AVFilterBufferRef > avfilter_get_audio_buffer_ref_from_frame(Pointer<AVFrame > frame, int perms) {
		return Pointer.pointerToAddress(avfilter_get_audio_buffer_ref_from_frame(Pointer.getPeer(frame), perms), AVFilterBufferRef.class);
	}
	@Ptr 
	protected native static long avfilter_get_audio_buffer_ref_from_frame(@Ptr long frame, int perms);
	/**
	 * Create and return a buffer reference from the data and properties<br>
	 * contained in frame.<br>
	 * * @param perms permissions to assign to the new buffer reference<br>
	 * @deprecated avfilter APIs work natively with AVFrame instead.<br>
	 * Original signature : <code>AVFilterBufferRef* avfilter_get_buffer_ref_from_frame(AVMediaType, const AVFrame*, int)</code><br>
	 * <i>native declaration : libavfilter/avcodec.h:23</i>
	 */
	public static Pointer<AVFilterBufferRef > avfilter_get_buffer_ref_from_frame(IntValuedEnum<AVMediaType > type, Pointer<AVFrame > frame, int perms) {
		return Pointer.pointerToAddress(avfilter_get_buffer_ref_from_frame((int)type.value(), Pointer.getPeer(frame), perms), AVFilterBufferRef.class);
	}
	@Ptr 
	protected native static long avfilter_get_buffer_ref_from_frame(int type, @Ptr long frame, int perms);
	/**
	 * Get an audio/video buffer data from buffer_sink and put it in bufref.<br>
	 * * This function works with both audio and video buffer sinks.<br>
	 * * @param buffer_sink pointer to a buffersink or abuffersink context<br>
	 * @param flags a combination of AV_BUFFERSINK_FLAG_* flags<br>
	 * @return >= 0 in case of success, a negative AVERROR code in case of<br>
	 * failure<br>
	 * Original signature : <code>int av_buffersink_get_buffer_ref(AVFilterContext*, AVFilterBufferRef**, int)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:9</i>
	 */
	public static int av_buffersink_get_buffer_ref(Pointer<AVFilterContext > buffer_sink, Pointer<Pointer<AVFilterBufferRef > > bufref, int flags) {
		return av_buffersink_get_buffer_ref(Pointer.getPeer(buffer_sink), Pointer.getPeer(bufref), flags);
	}
	protected native static int av_buffersink_get_buffer_ref(@Ptr long buffer_sink, @Ptr long bufref, int flags);
	/**
	 * Get the number of immediately available frames.<br>
	 * Original signature : <code>int av_buffersink_poll_frame(AVFilterContext*)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:14</i>
	 */
	public static int av_buffersink_poll_frame(Pointer<AVFilterContext > ctx) {
		return av_buffersink_poll_frame(Pointer.getPeer(ctx));
	}
	protected native static int av_buffersink_poll_frame(@Ptr long ctx);
	/**
	 * Get a buffer with filtered data from sink and put it in buf.<br>
	 * * @param ctx pointer to a context of a buffersink or abuffersink AVFilter.<br>
	 * @param buf pointer to the buffer will be written here if buf is non-NULL. buf<br>
	 *            must be freed by the caller using avfilter_unref_buffer().<br>
	 *            Buf may also be NULL to query whether a buffer is ready to be<br>
	 *            output.<br>
	 * * @return >= 0 in case of success, a negative AVERROR code in case of<br>
	 *         failure.<br>
	 * Original signature : <code>int av_buffersink_read(AVFilterContext*, AVFilterBufferRef**)</code><br>
	 * <i>native declaration : libavfilter/buffersink.h:26</i>
	 */
	public static int av_buffersink_read(Pointer<AVFilterContext > ctx, Pointer<Pointer<AVFilterBufferRef > > buf) {
		return av_buffersink_read(Pointer.getPeer(ctx), Pointer.getPeer(buf));
	}
	protected native static int av_buffersink_read(@Ptr long ctx, @Ptr long buf);
